--- a/app/templates/components/bs-modal.hbs
+++ b/app/templates/components/bs-modal.hbs
@@ -1,9 +1,11 @@
 <div class="modal-dialog">
     <div class="modal-content">
+        {{#if includeHeader}}
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             <h4 class="modal-title">{{title}}</h4>
         </div>
+        {{/if}}
         <div class="modal-body">
             {{#if body}}
                 {{view view.body}}
@@ -11,10 +13,12 @@
                 {{yield}}
             {{/if}}
         </div>
+        {{#if includeFooter}}
         <div class="modal-footer">
             {{#each footerButtons}}
                 {{bs-button content=this targetObjectBinding="view.targetObject"}}
             {{/each}}
         </div>
+        {{/if}}
     </div>
 </div>
